fixing button being too close to logo.

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -45,6 +45,12 @@
   text-align: center;
 }
 
+@media (max-width: 840px) {
+  .logo svg {
+    margin-top: 2rem;
+  }
+}
+
 @media (min-width: 678px) {
   .footer {
     margin: 1rem auto 3rem auto;
